sort.basic.gnome.AlgGnomeSort.scala.code
def gnomeSort() {
  val lgr:Int = getNombreValeurs() 
  for i in range(i <-1 to n-3){
    if(plusPetit(i+1,i+2)){
      echange(i,i+1)
    }
    else{
      echange(i+1,i+2)
      echange(i-1,i)
    }
  }
}